# CinemaApplication

./: CMakeLists.txt  main(class User incompleta)  main.cpp
headers/: Bilhete.h  Cinema.h  CinemaOld.h
headers/controllers/: Controller.h
headers/exceptions/: DuplicatedDataException.h  InsufficientCashException.h  InsuficcientCashException.h  InvalidCreditCardException.h  RoomAlreadyFullException.h  SeatNoLongerAvailableException.h  UserNotFoundException.h
headers/model/: Booking.h  BookingContainer.h  Cinema.h  Date.h  Movie.h  MovieContainer.h  PaymentDetails.h  Room.h  Seat.h  SeatLayout.h  Showtime.h  ShowtimeContainer.h  User.h  UserContainer.h
headers/views/: ConfirmationView.h  MovieListView.h  PaymentView.h  SeatSelectionView.h  ShowTimeView.h  Utils.h  View.h  WelcomeScreen.h
mock/: MockData.cpp  MockData.h
sources/: Bilhete.cpp  Cinema.cpp  CinemaOld.cpp
sources/controllers/: Controller.cpp
sources/exceptions/: DuplicatedDataException.cpp  InsufficientCashException.cpp
sources/model/: Booking.cpp  BookingContainer.cpp  Cinema.cpp  Date.cpp  Movie.cpp  MovieContainer.cpp  PaymentDetails.cpp  Room.cpp  Seat.cpp  SeatLayout.cpp  Showtime.cpp  ShowtimeContainer.cpp  User(Costa).cpp  User.cpp  UserContainer.cpp
sources/views/: Utils.cpp  View.cpp  WelcomeScreen.cpp
